--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Alvis Grigaluns</title>
-        <link rel="stylesheet" type="text/css" href="output.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
         <script type="text/javascript" src="scripts.js"></script>
     </head>
 	<body style="margin-bottom: 10px">
