update old tags

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
                 </p>
                 <div class="p">
-                    <p>Es esmu <b>PHP</b> web aplikāciju izstrādātājs. Līdz šim izmantoju <b>Symfony</b> kā galveno <b>PHP</b> palīgu, bet esmu gatavs apgūt jaunas prasmes.</p>
-                    <p>Protu strādāt arī ar <b>Mysql</b>, <b>Docker</b>, <b>Apache</b>, <b>Nginx</b>, <b>CSS</b>, <b>SCSS</b>, <b>Bootstrap</b>, <b>Javascript</b>, <b>Jquery</b>, <b>Python</b><p>
+                    <p>Es esmu <strong>PHP</strong> web aplikāciju izstrādātājs. Līdz šim izmantoju <strong>Symfony</strong> kā galveno <strong>PHP</strong> palīgu, bet esmu gatavs apgūt jaunas prasmes.</p>
+                    <p>Protu strādāt arī ar <strong>Mysql</strong>, <strong>Docker</strong>, <strong>Apache</strong>, <strong>Nginx</strong>, <strong>CSS</strong>, <strong>SCSS</strong>, <strong>Bootstrap</strong>, <strong>Javascript</strong>, <strong>Jquery</strong>, <strong>Python</strong><p>
                 </div>
             <div id="work">
                 <h2>Darba pieredze</h2>
