--- a/enindex.html
+++ b/enindex.html
@@ -6,106 +6,107 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
         <script type="text/javascript" src="scripts.js"></script>
     </head>
-	<body style="margin-bottom: 10px">
+    <body style="margin-bottom: 10px">
         <div style="margin: 20px">
             <a href="enindex.html">EN</a>
             <a href="index.html">LV</a>
         </div>
         <header id="me">
-			<div class="h1">
-                <h1 style="text-align: center; padding: 20px;">Par mani</h1>
-			</div>
-			<div class="nav">
+            <div class="h1">
+                <h1 style="text-align: center; padding: 20px;">About me</h1>
+            </div>
+            <div class="nav">
                 <nav style="float: right">
                     <ol>
-                        <li><a href="#me">Par mani</a></li>
-                        <li><a href="#work">Darba pieredze</a></li>
-                        <li><a href="#hobbies">Hobiji</a></li>
+                        <li><a href="#me">About me</a></li>
+                        <li><a href="#work">Work experience</a></li>
+                        <li><a href="#hobbies">Hobbies</a></li>
                     </ol>
                 </nav>
-			</div>
-		</header>
+            </div>
+        </header>
         <section id="content">
             <div class="image-cropper">
                 <img src="alvis.jpg" class="profile-pic" alt="photo of Alvis" />
             </div>
             <p style="margin-left: 20px">
-                Sveiki, mani sauc <span class="my-name">Alvis.</span>
+                Hello, my name is <span class="my-name">Alvis.</span>
             </p>
             <div class="p">
-                <p>Es esmu <strong>PHP</strong> web aplikāciju izstrādātājs. Līdz šim izmantoju <strong>Symfony</strong> kā galveno <strong>PHP</strong> palīgu, bet esmu gatavs apgūt jaunas prasmes.</p>
-                <p>Protu strādāt arī ar <strong>Mysql</strong>, <strong>Docker</strong>, <strong>Apache</strong>, <strong>Nginx</strong>, <strong>CSS</strong>, <strong>SCSS</strong>, <strong>Bootstrap</strong>, <strong>Javascript</strong>, <strong>Jquery</strong>, <strong>Python</strong><p>
+                <p>I'm <strong>PHP</strong> developer. Currently working with <strong>Symfony</strong> but im ready to learn new skills</p>
+                <p>I know how to work with <strong>Mysql</strong>, <strong>Docker</strong>, <strong>Apache</strong>, <strong>Nginx</strong>, <strong>CSS</strong>, <strong>SCSS</strong>, <strong>Bootstrap</strong>, <strong>Javascript</strong>, <strong>Jquery</strong>, <strong>Python</strong><p>
             </div>
             <div id="work">
-                <h2>Darba pieredze</h2>
+                <h2>Work experience</h2>
                 <table class="work-xp">
                     <thead>
                     <tr>
-                        <th>Darbs</th>
-                        <th>Gads</th>
-                        <th>Pieredze</th>
+                        <th>Work</th>
+                        <th>Year</th>
+                        <th>Experience</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
-                            <td><a href="https://www.cili.lv/" target="_blank">SIA Pica service</a></td>
-                            <td>2012</td>
-                            <td>Pavārs</td>
+                        <td><a href="https://www.cili.lv/" target="_blank">SIA Pica service</a></td>
+                        <td>2012</td>
+                        <td>Cook</td>
                     </tr>
                     <tr>
                         <td><a href="https://www.mcbalerija.com/" target="_blank">SIA IKA FOOD</a></td>
                         <td>2013</td>
-                        <td>Pavārs</td>
+                        <td>Cook</td>
                     </tr>
                     <tr>
                         <td><a href="https://www.lv.dsv.com/" target="_blank">SIA DSV</a></td>
                         <td>2014</td>
-                        <td>Krāvējs</td>
+                        <td>Loader</td>
                     </tr>
                     <tr>
                         <td><a href="https://www.facebook.com/profile.php?id=100010248939226" target="_blank">Francija</a></td>
                         <td>2015</td>
-                        <td>Ogu lasītājs</td>
+                        <td>Berry picker</td>
                     </tr>
                     <tr>
                         <td><a href="https://www.raitums.lv/copy-of-sakums" target="_blank">SIA Raituma krāsas</a></td>
                         <td>2016</td>
-                        <td>Restaurators</td>
+                        <td>Restorer</td>
                     </tr>
                     <tr>
                         <td><a href="http://www.jauniesumaja.lv/" target="_blank">Liepājas bērnu jauniešu centrs</a></td>
                         <td>2017</td>
-                        <td>Skolotājs</td>
+                        <td>Teacher</td>
                     </tr>
                     <tr>
                         <td><a href="https://www.facebook.com/romarestorans/" target="_blank">SIA Romas dārzs</a></td>
                         <td>2018</td>
-                        <td>Pavārs</td>
+                        <td>Cook</td>
                     </tr>
                     <tr>
                         <td><a href="https://www.facebook.com/hotpotatoliepaja/" target="_blank">SIA Hot Potato</a></td>
                         <td>2019</td>
-                        <td>Pavārs</td>
+                        <td>Cook</td>
                     </tr>
                     <tr>
                         <td><a href="https://www.crealoz.fr/" target="_blank">SIA Crealoz</a></td>
                         <td>2019 - 2021</td>
-                        <td>Programmētājs</td>
+                        <td>Programmer</td>
                     </tr>
                     </tbody>
                 </table>
             </div>
             <div id="hobbies">
-                <h3>Hobiji</h3>
+                <h3>Hobbies</h3>
                 <ul>
-                    <li>Mūzika</li>
-                    <li>Sports</li>
-                    <li>Kulinārija</li>
+                    <li>Music</li>
+                    <li>Sport</li>
+                    <li>Cooking</li>
                 </ul>
             </div>
         </section>
-        <footer style="text-align: center; padding: 10px; margin-bottom: 20px;">
-            Copyright &copy; Alvis
-        </footer>
+    <footer style="text-align: center; padding: 10px; margin-bottom: 20px;">
+        Copyright &copy; Alvis
+    </footer>
     </body>
 </html>
+
