--- a/enindex.html
+++ b/enindex.html
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="scripts.js"></script>
     </head>
     <body style="margin-bottom: 10px">
-        <div style="margin: 20px">
+        <div class="lang">
             <a href="enindex.html">EN</a>
             <a href="index.html">LV</a>
         </div>
