--- a/enindex.html
+++ b/enindex.html
@@ -13,7 +13,7 @@
         </div>
         <header id="me">
             <div class="h1">
-                <h1 style="text-align: center; padding: 20px;">About me</h1>
+                <h1 style="text-align: center; padding: 20px;">Curriculum Vitae</h1>
             </div>
             <div class="nav">
                 <nav style="float: right">
@@ -29,12 +29,65 @@
             <div class="image-cropper">
                 <img src="alvis.jpg" class="profile-pic" alt="photo of Alvis" />
             </div>
-            <p style="margin-left: 20px">
-                Hello, my name is <span class="my-name">Alvis.</span>
-            </p>
-            <div class="p">
-                <p>I'm <strong>PHP</strong> developer. Currently working with <strong>Symfony</strong> but im ready to learn new skills</p>
-                <p>I know how to work with <strong>Mysql</strong>, <strong>Docker</strong>, <strong>Apache</strong>, <strong>Nginx</strong>, <strong>CSS</strong>, <strong>SCSS</strong>, <strong>Bootstrap</strong>, <strong>Javascript</strong>, <strong>Jquery</strong>, <strong>Python</strong><p>
+            <div class="contact-info">
+                <h2>Personal details</h2>
+                <p>Name: Alvis Grigaļūns</p>
+                <p>Email address: alvisgrigaluns@gmail.com</p>
+                <p>Phone: +37124828116</p>
+                <p>Location: Liepāja</p>
+            </div>
+            <div class="text">
+                <p style="margin-left: 20px">
+                    Hello, my name is <span class="my-name">Alvis.</span>
+                </p>
+                <div class="p">
+                    <p>I'm <strong>PHP</strong> developer. Currently working with <strong>Symfony</strong> but im ready to learn new skills</p>
+                    <p>I know how to work with <strong>Mysql</strong>, <strong>Docker</strong>, <strong>Apache</strong>, <strong>Nginx</strong>, <strong>CSS</strong>, <strong>SCSS</strong>, <strong>Bootstrap</strong>, <strong>Javascript</strong>, <strong>Jquery</strong>, <strong>Python</strong><p>
+                </div>
+            </div>
+            <div id="education">
+                <h2>Education</h2>
+                <table class="work-xp">
+                    <thead>
+                    <tr>
+                        <th>School</th>
+                        <th>Year</th>
+                        <th>Education</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Jelgavas Amatu vidusskola</td>
+                        <td>2010 - 2013</td>
+                        <td>Cook</td>
+                    </tr>
+                    <tr>
+                        <td>Jelgavas 4. Vidusskola</td>
+                        <td>2009 - 2010</td>
+                        <td>Primary education</td>
+                    </tr>
+                    <tr>
+                        <td>Liepājas Katoļu pamatskola</td>
+                        <td>2007 - 2009</td>
+                        <td>Primary education</td>
+                    </tr>
+                    <tr>
+                        <td>Jelgavas 1. Ģimnāzija</td>
+                        <td>2006 - 2007</td>
+                        <td>Primary education</td>
+                    </tr>
+                    <tr>
+                        <td>Jelgavas 4. Pamatskola</td>
+                        <td>2004 - 2006</td>
+                        <td>Primary education</td>
+                    </tr>
+                    <tr>
+                        <td>Jelgavas sākumskola</td>
+                        <td>2000 - 2004</td>
+                        <td>Primary school</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
             <div id="work">
                 <h2>Work experience</h2>
@@ -95,8 +148,53 @@
                     </tbody>
                 </table>
             </div>
+            <div id="skills">
+                <h2>Skills</h2>
+                <ul>
+                    <li>
+                        <label class="progress-label" for="symfony">Symfony</label>
+                        <progress id="symfony" value="60" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="laravel">Laravel</label>
+                        <progress id="laravel" value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="jquery">Jquery</label>
+                        <progress id="jquery" value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="html">HTML</label>
+                        <progress id="html" value="70" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="css">CSS</label>
+                        <progress id="css" value="60" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="php">PHP</label>
+                        <progress id="php" value="50" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="js">Javascript</label>
+                        <progress id="js" value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="apache">Apache</label>
+                        <progress id="apache" value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="nginx">Nginx</label>
+                        <progress id="nginx" value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="docker">Docker</label>
+                        <progress id="docker" value="40" max="100"></progress>
+                    </li>
+                </ul>
+            </div>
             <div id="hobbies">
-                <h3>Hobbies</h3>
+                <h2>Hobbies</h2>
                 <ul>
                     <li>Music</li>
                     <li>Sport</li>
