--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <header id="me">
 			<div class="h1">
-                <h1 style="text-align: center; padding: 20px;">Par mani</h1>
+                <h1 style="text-align: center; padding: 20px;">Curriculum Vitae</h1>
 			</div>
 			<div class="nav">
                 <nav style="float: right">
@@ -29,12 +29,64 @@
             <div class="image-cropper">
                 <img src="alvis.jpg" class="profile-pic" alt="photo of Alvis" />
             </div>
-            <p style="margin-left: 20px">
-                Sveiki, mani sauc <span class="my-name">Alvis.</span>
-            </p>
-            <div class="p">
-                <p>Es esmu <strong>PHP</strong> web aplikāciju izstrādātājs. Līdz šim izmantoju <strong>Symfony</strong> kā galveno <strong>PHP</strong> palīgu, bet esmu gatavs apgūt jaunas prasmes.</p>
-                <p>Protu strādāt arī ar <strong>Mysql</strong>, <strong>Docker</strong>, <strong>Apache</strong>, <strong>Nginx</strong>, <strong>CSS</strong>, <strong>SCSS</strong>, <strong>Bootstrap</strong>, <strong>Javascript</strong>, <strong>Jquery</strong>, <strong>Python</strong><p>
+            <div class="contact-info">
+                <p>Vārds: Alvis Grigaļūns</p>
+                <p>Epasts: alvisgrigaluns@gmail.com</p>
+                <p>Talrunis: +37124828116</p>
+                <p>Vieta: Liepāja</p>
+            </div>
+            <div class="text">
+                <p style="margin-left: 20px">
+                    Sveiki, mani sauc <span class="my-name">Alvis.</span>
+                </p>
+                <div class="p">
+                    <p>Es esmu <strong>PHP</strong> web aplikāciju izstrādātājs. Līdz šim izmantoju <strong>Symfony</strong> kā galveno <strong>PHP</strong> palīgu, bet esmu gatavs apgūt jaunas prasmes.</p>
+                    <p>Protu strādāt arī ar <strong>Mysql</strong>, <strong>Docker</strong>, <strong>Apache</strong>, <strong>Nginx</strong>, <strong>CSS</strong>, <strong>SCSS</strong>, <strong>Bootstrap</strong>, <strong>Javascript</strong>, <strong>Jquery</strong>, <strong>Python</strong><p>
+                </div>
+            </div>
+            <div id="education">
+                <h2>Izglītība</h2>
+                <table class="work-xp">
+                    <thead>
+                    <tr>
+                        <th>Skola</th>
+                        <th>Gads</th>
+                        <th>Izglītība</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Jelgavas Amatu vidusskola</td>
+                        <td>2010 - 2013</td>
+                        <td>Pavārs</td>
+                    </tr>
+                    <tr>
+                        <td>Jelgavas 4. Vidusskola</td>
+                        <td>2009 - 2010</td>
+                        <td>Pamatizglītība</td>
+                    </tr>
+                    <tr>
+                        <td>Liepājas Katoļu pamatskola</td>
+                        <td>2007 - 2009</td>
+                        <td>Pamatizglītība</td>
+                    </tr>
+                    <tr>
+                        <td>Jelgavas 1. Ģimnāzija</td>
+                        <td>2006 - 2007</td>
+                        <td>Pamatizglītība</td>
+                    </tr>
+                    <tr>
+                        <td>Jelgavas 4. Pamatskola</td>
+                        <td>2004 - 2006</td>
+                        <td>Pamatizglītība</td>
+                    </tr>
+                    <tr>
+                        <td>Jelgavas sākumskola</td>
+                        <td>2000 - 2004</td>
+                        <td>Pamatizglītība</td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
             <div id="work">
                 <h2>Darba pieredze</h2>
@@ -95,8 +147,53 @@
                     </tbody>
                 </table>
             </div>
+            <div id="skills">
+                <h2>Prasmes</h2>
+                <ul>
+                    <li>
+                        <label class="progress-label" for="symfony">Symfony</label>
+                        <progress id="symfony" value="60" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="laravel">Laravel</label>
+                        <progress id="laravel" value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="jquery">Jquery</label>
+                        <progress id="jquery" value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="html">HTML</label>
+                        <progress id="html" value="70" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="css">CSS</label>
+                        <progress id="css" value="60" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="php">PHP</label>
+                        <progress id="php" value="50" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="js">Javascript</label>
+                        <progress id="js" value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="apache">Apache</label>
+                        <progress id="apache" value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="nginx">Nginx</label>
+                        <progress id="nginx" value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="progress-label" for="docker">Docker</label>
+                        <progress id="docker" value="40" max="100"></progress>
+                    </li>
+                </ul>
+            </div>
             <div id="hobbies">
-                <h3>Hobiji</h3>
+                <h2>Hobiji</h2>
                 <ul>
                     <li>Mūzika</li>
                     <li>Sports</li>
