--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 <nav style="float: right">
                     <ol>
                         <li><a href="#me">Par mani</a></li>
+                        <li><a href="#education">Izglītība</a></li>
                         <li><a href="#work">Darba pieredze</a></li>
+                        <li><a href="#skills">Prasmes</a></li>
                         <li><a href="#hobbies">Hobiji</a></li>
                     </ol>
                 </nav>
