--- a/enindex.html
+++ b/enindex.html
@@ -19,7 +19,9 @@
                 <nav style="float: right">
                     <ol>
                         <li><a href="#me">About me</a></li>
+                        <li><a href="#education">Education</a></li>
                         <li><a href="#work">Work experience</a></li>
+                        <li><a href="#skills">Skills</a></li>
                         <li><a href="#hobbies">Hobbies</a></li>
                     </ol>
                 </nav>
